...
                    Button {
                        
                        showEditor = true
                        
                    } label: {
                        
                        Text("Customize My Avatar")
                            .font(.headline)
                            .frame(maxWidth: .infinity)
                            .padding()
                    }
                    .buttonStyle(.borderedProminent)
                }
...
